# tenderloin

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tndrln.sql
resources/: README.txt  regions
sources/: __main__.py  main.py
sources/dream/: __init__.py  ideas.py
sources/prozorro/: __init__.py  tenders.py
sources/spending/: __init__.py  transactions.py
sql/migrations/: 001-schema-initial.sql  002-prozorro-tender.sql
sql/queries/: docs.sql  docs_raw.sql  raw_data.sql
sql/queries/dream/: ideas.sql
sql/queries/prozorro/: tenders.sql
sql/queries/spending/: transactions.sql
src/sources/prozorro/: loader.py  main.py
src/sources/spending/: __init__.py  transactions.py
src/tenderloin/sources/: __main__.py
src/tenderloin/sources/dream/: ideas.py
src/tenderloin/sources/prozorro/: tenders.py
src/tenderloin/sources/spending/: __init__.py  transactions.py
src/tenderloin/ui/: index.py
src/tenderloin/ui/pages/: tender.py
src/utils/: db.py
utils/: __init__.py  db.py
