[project]
name = "tenderloin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "prozorro-crawler",
]

[tool.uv.sources]
prozorro-crawler = { git = "https://github.com/ProzorroUKR/prozorro_crawler.git" }
