[project]
name = "tenderloin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosql>=15.0",
    "httpx[http2]>=0.28.1",
    "ocdskit>=1.5.0",
    "prozorro-crawler",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
]

[tool.uv.sources]
prozorro-crawler = { git = "https://github.com/ProzorroUKR/prozorro_crawler.git" }
